--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -28,14 +28,14 @@
             <img src="img/nav-icon-turned.png" alt="" id="nav-icon-turned">
             <div id="nav-box">
                 <a href="../index.html">Home</a>
-                <a href="#question-1">Question 1</a>
-                <a href="#question-2">Question 2</a>
-                <a href="#question-3">Question 3</a>
-                <a href="#question-4">Question 4</a>
-                <a href="#question-5">Question 5</a>
-                <a href="#question-6">Question 6</a>
-                <a href="#question-7">Question 7</a>
-                <a href="#question-8">Question 8</a>
+                <a href="#question-1">1. Entering the Industry</a>
+                <a href="#question-2">2. First Challenges</a>
+                <a href="#question-3">3. Difficult Questions</a>
+                <a href="#question-4">4. Motivation</a>
+                <a href="#question-5">5. Tools</a>
+                <a href="#question-6">6. Knowing the Competition</a>
+                <a href="#question-7">7. Measurement Basics</a>
+                <a href="#question-8">8. Pitfalls</a>
             </div>
         </nav>
         <!-- </div> -->
@@ -59,7 +59,7 @@
                     </figcaption>
                 </figure>
                 <div class="p-container">
-                    <p><em>S</em>ince his childhood, Daniel George had very stylish parents, furthermore since is fater
+                    <p><em>S</em>ince his childhood, Daniel George had very stylish parents, furthermore since is father
                         usually dresses up
                         for business. In turn, Daniel as been exposed to Men’s styles and wears at an early age.
                         Using this early experience, he first enters directly into the industry as a Sales Specialist
