--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -48,10 +48,12 @@
     <!-- Section 1 -->
     <div class="parallax-img" id="parallax-image-1">
       <section id="intro-section" class="info-box-section">
-        <p>Put the introduction here.</p>
-        <p>Maybe a couple sentences long</p>
-        <p>I think about 3 or 4 is about the right amount for this</p>
-        <p>I think so. What do you think?</p>
+        <p>There are a number of things that can be sold. Cars, doors, windows, lumber, insurance, etc… </p>
+        <p>But what about clothing?</p>
+        <p>Not just your average small, medium, or large sizes.</p>
+        <p>But Custom and Bespoke Clothing?</p>
+        <p>What is it like selling a bespoke suit or hat?</p>
+        <p>With the help of Daniel George Custom Clothiers, Optimo Hatmakers, and Monopoli Custom Clothiers, we are here to hopefully answer that question.</p>
       </section>
     </div>
 
@@ -85,7 +87,11 @@
     <!-- Section 3 -->
     <div class="parallax-img" id="parallax-image-2">
       <section id="conclusion-section" class="info-box-section">
-        <p>Conclusion</p>
+        <p>So what can we draw from this? </p>
+        <p>So far, as it seems, each interviewed salesperson, each with different experiences, has different answers to the questions.</p>
+        <p>In conclusion, it seems to be based on everyone's experience. For some, it is important to know the competitors.</p>
+        <p>For some, different questions can impose different challenges.</p>
+        <p>And for some, it is the product and representation of the brand itself that motivates one to be a salesperson in bespoke and custom clothing.</p>
       </section>
     </div>
 
