--- a/portfolio/final-project/interview-2/index.html
+++ b/portfolio/final-project/interview-2/index.html
@@ -28,14 +28,14 @@
            <img src="img/nav-icon-turned.png" alt="" id="nav-icon-turned">
             <div id="nav-box">
                 <a href="../index.html">Home</a>
-                <a href="#question-1">Question 1</a>
-                <a href="#question-2">Question 2</a>
-                <a href="#question-3">Question 3</a>
-                <a href="#question-4">Question 4</a>
-                <a href="#question-5">Question 5</a>
-                <a href="#question-6">Question 6</a>
-                <a href="#question-7">Question 7</a>
-                <a href="#question-8">Question 8</a>
+                <a href="#question-1">1. Entering the Industry</a>
+                <a href="#question-2">2. First Challenges</a>
+                <a href="#question-3">3. Difficult Questions</a>
+                <a href="#question-4">4. Motivation</a>
+                <a href="#question-5">5. Tools</a>
+                <a href="#question-6">6. Pitfalls</a>
+                <a href="#question-7">7. Knowing the Competition</a>
+                <a href="#question-8">8. Measurement Basics</a>
             </div>
           </nav>
         <!-- </div> -->
