Font Changes applied

--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -48,6 +48,7 @@
     <!-- Section 1 -->
     <div class="parallax-img" id="parallax-image-1">
       <section id="intro-section" class="info-box-section">
+        <h2>Introduction</h2>
         <p>There are a number of things that can be sold. Cars, doors, windows, lumber, insurance, etc… </p>
         <p>But what about clothing?</p>
         <p>Not just your average small, medium, or large sizes.</p>
@@ -87,6 +88,7 @@
     <!-- Section 3 -->
     <div class="parallax-img" id="parallax-image-2">
       <section id="conclusion-section" class="info-box-section">
+        <h2>Conclusion</h2>
         <p>So what can we draw from this? </p>
         <p>So far, as it seems, each interviewed salesperson, each with different experiences, has different answers to the questions.</p>
         <p>In conclusion, it seems to be based on everyone's experience. For some, it is important to know the competitors.</p>
